syntax = "proto3";

package kuma.common.v1alpha1;

option go_package = "github.com/kumahq/kuma/api/common/v1alpha1";

// TargetRef defines structure that allows attaching policy to various objects
message TargetRef {
  enum Kind {
    Mesh = 0;
    MeshSubset = 1;
    MeshService = 2;
    MeshServiceSubset = 3;
    MeshGatewayRoute = 4;
    MeshHTTPRoute = 5;
  }

  // Kind of the referenced resource
  // +kubebuilder:validation:Enum=Mesh;MeshSubset;MeshService;MeshServiceSubset;MeshGatewayRoute;MeshHTTPRoute
  string kind = 1;

  // Name of the referenced resource
  string name = 2;

  // Tags are used with MeshSubset and MeshServiceSubset to define a subset of
  // proxies
  map<string, string> tags = 3;

  // Mesh is used with MeshService and MeshServiceSubset to identify the service
  // from another mesh. Could be useful when implementing policies with
  // cross-mesh support.
  string mesh = 4;
}
